# leitor-nf-ia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  deps.py  exceptions.py  main.py
app/config/: ai_constants.py  settings.py
app/middleware/: request_id.py
app/routers/: analysis.py  health.py
app/schemas/: __init__.py  analysis.py
app/services/: __init__.py  analysis_service.py  json_extract.py  mime.py  openai_analyzer.py  procedure_keywords.py  procedure_matcher.py  protocol.py
postman/: leitor-nf-ia.postman_collection.json
prompts/: analisar_nf.md
scripts/: fetch-secrets.ps1  fetch-secrets.sh
tests/: conftest.py  test_api.py  test_json_extract.py  test_procedure_matcher.py
