[project]
name = "leitor-nf-ia"
version = "0.1.0"
description = "API FastAPI para análise de NF veterinária com OpenAI (multimodal)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "openai",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "ruff==0.9.4",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
